--- a/package.json
+++ b/package.json
@@ -15,23 +15,24 @@
     "eslint": "^6.0.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-react": "^7.14.0"
+    "eslint-plugin-react": "^7.14.0",
+    "install-peers": "^1.0.3"
   },
   "dependencies": {
+    "knex": "latest",
     "lodash": "^4.17.5",
+    "sqlite3": "latest",
     "strapi": "3.0.0-beta.16.3",
     "strapi-admin": "3.0.0-beta.16.3",
-    "strapi-utils": "3.0.0-beta.16.3",
-    "strapi-plugin-settings-manager": "3.0.0-beta.16.3",
-    "strapi-plugin-content-type-builder": "3.0.0-beta.16.3",
-    "strapi-plugin-content-manager": "3.0.0-beta.16.3",
-    "strapi-plugin-users-permissions": "3.0.0-beta.16.3",
-    "strapi-plugin-email": "3.0.0-beta.16.3",
-    "strapi-plugin-upload": "3.0.0-beta.16.3",
     "strapi-hook-bookshelf": "3.0.0-beta.16.3",
     "strapi-hook-knex": "3.0.0-beta.16.3",
-    "knex": "latest",
-    "sqlite3": "latest"
+    "strapi-plugin-content-manager": "3.0.0-beta.16.3",
+    "strapi-plugin-content-type-builder": "3.0.0-beta.16.3",
+    "strapi-plugin-email": "3.0.0-beta.16.3",
+    "strapi-plugin-settings-manager": "3.0.0-beta.16.3",
+    "strapi-plugin-upload": "3.0.0-beta.16.3",
+    "strapi-plugin-users-permissions": "3.0.0-beta.16.3",
+    "strapi-utils": "3.0.0-beta.16.3"
   },
   "author": {
     "name": "A Strapi developer"
